fix icons alignment

--- a/packages/torque/src/styles/components/asset-selector.scss
+++ b/packages/torque/src/styles/components/asset-selector.scss
@@ -84,7 +84,7 @@
       margin-top: 50px;
     }
     .asset-selector__title {
-      width: 100px;
+      width: 80px;
       margin-top: 9px;
       float: left;
       font-size: 22px;
@@ -95,7 +95,7 @@
       color: $color-gray-dark;
 
       &--coming-soon {
-        font-size: 1rem;
+        font-size: 11px;
         color: #a9b5c7;
         margin: unset;
         letter-spacing: unset;
